--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,23 @@ asgiref==3.2.9
 beautifulsoup4==4.9.1
 bs4==0.0.1
 certifi==2020.4.5.2
+chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.0.7
+django-heroku==0.3.1
 get==2019.4.13
+gunicorn==20.0.4
+idna==2.9
+install==1.3.1
 post==2019.4.13
+psycopg2==2.8.5
 public==2019.4.13
 pytz==2020.1
 query-string==2019.4.13
 request==2019.4.13
+requests==2.24.0
 soupsieve==2.0.1
 sqlparse==0.3.1
+urllib3==1.25.9
+whitenoise==5.1.0
 wincertstore==0.2
